@@ -28,9 +28,9 @@
       </center>
       <br>
       <center>
-       General Information :&nbsp;
+       <a href="elections.html">General Information</a> :&nbsp;
        <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
-       <a href="election-2000.html">2000</a>
+       2000
       </center>
      </td>
     </tr>
@@ -40,29 +40,42 @@
     <tr>
      <td>
 
-     <h2 align="center">Elections</h2>
+<br>
+<h2 align="center">Fall 2000 GNOME Foundation Election</h2>
 
-      <p>
-       The GNOME Foundation Membership elects the Board of Directors each
-       November.  Any member can nominate themself to run in the election.
-       The overall election process is overseen by the Membership and Elections
-       Committee, which can be reached at membership@gnome.org. 
-      </p>
+<p>
+The election results from the Fall 2000 Board of Directors election are archived
+here for public access.
+</p>
 
-      <h3>Links:</h3>
-      <p>
-       <ul>
-        <li>
-         <a href="electionrules.html">Election Rules and Timeline</a> - For 2001 elections.
-        </li>
-        <li>
-         <a href="election-2000.html">Materials from the Fall 2000 Election</a>
-        </li>
-       </ul>
-      </p>
+<B>Fall 2000 Election Materials:</B>
+<UL>
+  <LI>
+   <A href="http://mail.gnome.org/archives/foundation-announce/2000-November/msg00002.html">Election results announcement.</A>
+  </LI>
+  <LI>
+   <A href="electionresults.html">Detailed election results.</A>
+  </LI>
+  <LI>
+   <A href="http://mail.gnome.org/archives/vote/2000-November/thread.html">Archive of all votes.</A>
+  </LI>
+  <LI>
+   <A href="http://condor.nj.org/~steintr/verify.html">Instructions</A> for
+   running the <A href="vote-counter.py">vote counting script</A>.
+  </LI>
+  <LI>
+   <!-- <A href="final_membership_list.txt">List of registered voters.</A> -->
+   <A href="membership-list.html">List of registered voters.</A>
+  </LI>
+  <LI>
+   <A href="ballot-summary.html">List of candidates for Board of Directors</A>
+  </LI>
+  <LI>
+   <A href="electionrules-2000.html">Election rules and procedures</A>
+  </LI>
+</UL>
 
-     </td>
-    </tr>
+
 
     <!-- Start of Boilerplate -->
     <tr>
