@@ -1,26 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<HTML>
-<HEAD>
-	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=iso-8859-1">
-	<TITLE></TITLE>
-	<META NAME="GENERATOR" CONTENT="StarOffice/5.2 (Linux)">
-	<META NAME="AUTHOR" CONTENT="Bart Decrem">
-	<META NAME="CREATED" CONTENT="20001002;12004700">
-	<META NAME="CHANGEDBY" CONTENT="Bart Decrem">
-	<META NAME="CHANGED" CONTENT="20001023;12114800">
-	<STYLE>
-	<!--
-		@page { size: 8.5in 10.96in; margin-left: 1.25in; margin-right: 1.25in; margin-top: 1in; margin-bottom: 1in }
-	-->
-	</STYLE>
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<P ALIGN=CENTER STYLE="margin-bottom: 0in"><B>GNOME Foundation
-Election Rules &amp; Timeline</B></P>
-<P STYLE="margin-bottom: 0in"><BR>
-</P>
-<P STYLE="margin-bottom: 0in"><U>Election Rules</U></P>
-<OL>
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+ <head>
+  <title>The GNOME Foundation: Membership Policy</title>
+ </head>
+ <body bgcolor="#FFFFFF">
+  <center>
+   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+    <tr VALIGN=TOP NOSAVE>
+     <td VALIGN=TOP NOSAVE>
+      <center>
+       <a href="http://www.gnome.org">
+       <img SRC="gnome.jpg" ALT="" height=250 width=198 border=0></a><img
+       SRC="text.png" ALT="The GNOME Foundation" height=198 width=354>
+      </center>
+     </td>
+    </tr>
+
+    <tr>
+     <td>
+      <center>
+       <a href="index.html">Home</a> :&nbsp;
+       <a href="faq.html">FAQ</a> :&nbsp;
+       <a href="charter.html">Charter</a> :&nbsp;
+       <a href="membership.html">Membership</a> :&nbsp;
+       <a href="elections.html">Elections</a> :&nbsp;
+       <a href="directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="elections.html">General Information</a> :&nbsp;
+       Rules & Timeline :&nbsp;
+       <a href="election-2000.html">2000</a>
+      </center>
+     </td>
+    </tr>
+
+    <!-- End of Boilerplate -->
+
+    <tr>
+     <td>
+
+      <br>
+      <h2 align="center">GNOME Foundation Election Rules & Timeline</h2>
+
+
+       <h3>Election Rules</h3> 
+
+       <OL>
 	<LI><P STYLE="margin-bottom: 0in">See the <A HREF="charter.html">GNOME
 	Foundation charter</A> for general rules.</P>
 
@@ -99,12 +125,9 @@ Election Rules &amp; Timeline</B></P>
 	by e-mail to elections@gnome.org.  The committee shall have
 	the power to make any necessary changes or clarifications to
 	these rules at any point during the election.</P>
-</OL>
-<P STYLE="margin-bottom: 0in"><BR>
-</P>
-<P STYLE="margin-bottom: 0in"><U>Timeline (all deadlines are 23:59
-UTC/18:59 EST):</U></P>
-<UL>
+      </OL>
+       <h3>Timeline (all deadlines are 23:59 UTC/18:59 EST)</h3> 
+       <UL>
 	<LI><P STYLE="margin-bottom: 0in">November 8 (Thursday): Last
 	day to announce candidacies, submit summary statements, and
 	apply for membership (to be eligible for this election).</p>
@@ -118,7 +141,23 @@ UTC/18:59 EST):</U></P>
 	<LI><P STYLE="margin-bottom: 0in">November 27 (Tuesday): Last
 	day to challenge preliminary results</P>
 </UL>
-<P STYLE="margin-bottom: 0in"><BR>
-</P>
-</BODY>
-</HTML>
+
+
+     </td>
+    </tr>
+
+    <!-- Start of Boilerplate -->
+    <tr>
+     <td>
+      <center><font size=-1>This site is maintained by
+      <a href="mailto:bart@eazel.com">bart@eazel.com</a>
+      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
+      Schnapper-Casteras</a>.</font></center>
+     </td>
+    </tr>
+   </table>
+  </center>
+
+ </body>
+</html>
+
