@@ -124,20 +124,6 @@
 </p>
 
 <p>
- <a NAME="Membership"></a><b>Membership</b>
- <br>The Membership consists of all GNOME contributors who wish
- to become part of the Membership and go through the application 
- process.  Members can run for election to the Board of Directors,
- vote in the elections for the Board of Directors, and suggest 
- referenda.  If you are a GNOME contributor and would like to become
- a member of the Foundation, <a href="membership-form.html">apply
- here</a>.  If you aren't sure if you qualify, read the
- <a href="membership-policy.html">Membership Policy</a>. You
- can also browse the <a href="membership-list.html">current membership
- list</a>.
-</p>
-
-<p>
  <a NAME="Other Foundation-Related Materials"></a><b>Other 
  Foundation-Related Materials:</b>
 
