@@ -37,15 +37,12 @@
       <br>
       <h2 align="center">PUT PAGE TITLE HERE</h2>
 
-       <h3>PUT SECTION TITLE HERE</h3>
+      <h3>PUT SECTION TITLE HERE</h3>
 
-        <p>
-         Content for first paragraph goes here....
-        </p>
+      <p>
+       Content for first paragraph goes here....
+      </p>
 
-       </h3>
-
-      </h2>
 
      </td>
     </tr>
